--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,5 @@
 {
   "bumpVersion": "patch",
-  "branchPrefix": "feature/renovate-test-"
+  "branchPrefix": "feature/renovate-test-",
+  "dryRun": true
 }
